# PG

./: .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  README.md
binding/python/: CMakeLists.txt  __init__.py  generate.py
src/: AutoDiffFunction.h  CMakeLists.txt  CoMHalfSpaceConstr.cpp  CoMHalfSpaceConstr.h  CollisionConstr.cpp  CollisionConstr.h  ConfigStruct.h  CylindricalSurfaceConstr.cpp  CylindricalSurfaceConstr.h  EigenAutoDiffScalar.h  EllipseContactConstr.h  FK.h  FillSparse.cpp  FillSparse.h  FixedContactConstr.cpp  FixedContactConstr.h  FreeGripperConstr.cpp  FreeGripperConstr.h  FrictionConeConstr.cpp  FrictionConeConstr.h  ID.h  IpoptIntermediateCallback.h  IterationCallback.h  JacobianPatcher.h  Joint.h  PGData.cpp  PGData.h  PlanarSurfaceConstr.cpp  PlanarSurfaceConstr.h  PositiveForceConstr.cpp  PositiveForceConstr.h  PostureGenerator.cpp  PostureGenerator.h  RobotLinkConstr.cpp  RobotLinkConstr.h  StaticStabilityConstr.cpp  StaticStabilityConstr.h  StdCostFunc.cpp  StdCostFunc.h  TorqueConstr.h  (+1 more)
tests/: AlgoTest.cpp  CMakeLists.txt  DiffTest.cpp  PGTest.cpp  XYZ12Arm.h  Z12Arm.h  render.py
